--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "sang",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.25.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "joi": "^17.4.0",
     "mongoose": "^5.12.7"
   },
